# ch32v307-rust

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  memory.x  rust-toolchain.toml  wch-riscv.cfg
.cargo/: config.toml
src/: log.rs  main.rs
